...
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlayerView">
            <connections>
                <outlet property="artistLabel" destination="hRG-7m-lbi" id="nIy-7S-cl0"/>
                <outlet property="playPauseBtn" destination="0Ec-BD-M7P" id="Wud-FG-qZl"/>
                <outlet property="songLable" destination="FEx-3z-vfl" id="wML-gO-1n8"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
...
                                </stackView>
                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QJx-85-CK5">
                                    <rect key="frame" x="350" y="0.0" width="40" height="88"/>
                                    <subviews>
                                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Ec-BD-M7P">
                                            <rect key="frame" x="0.0" y="24" width="40" height="40"/>
                                            <accessibility key="accessibilityConfiguration" identifier="play"/>
                                            <constraints>
                                                <constraint firstAttribute="width" secondItem="0Ec-BD-M7P" secondAttribute="height" id="8wC-sW-Qs8"/>
                                                <constraint firstAttribute="width" constant="40" id="asE-ax-jlI"/>
                                            </constraints>
                                            <state key="normal" image="play_button"/>
                                            <connections>
...
