...
    }
}

private extension PopulerTracksController {
    func setupTableView() {
        tableView.rowHeight = 70
        tableView.accessibilityIdentifier = "PopulerTracksTable"
        tableView.tableFooterView = ActivityIndicatorView()
        tableView.register(SongTableCell.self)
        tableView.showsVerticalScrollIndicator = false
        navigationController?.hidesBarsOnSwipe = true
        navigationController?.navigationBar.prefersLargeTitles = true
    }
...
