...
                        <outlet property="totalTimeLabel" destination="JEg-lF-ELn" id="iyR-7h-szn"/>
                    </connections>
                </view>
            </subviews>
            <viewLayoutGuide key="safeArea" id="Fsr-zL-lhb"/>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <accessibility key="accessibilityConfiguration" identifier="FullScreenPlayer"/>
            <constraints>
                <constraint firstItem="lA8-lM-6Vz" firstAttribute="trailing" secondItem="umm-Ca-qcK" secondAttribute="trailing" id="1FN-Wg-hFm"/>
                <constraint firstItem="KFu-ia-2L0" firstAttribute="top" secondItem="umm-Ca-qcK" secondAttribute="top" id="1Jv-oO-tzd"/>
                <constraint firstItem="vTg-b5-MOU" firstAttribute="leading" secondItem="umm-Ca-qcK" secondAttribute="leading" constant="24" id="620-qG-1ju"/>
                <constraint firstItem="C2G-ZH-fff" firstAttribute="centerX" secondItem="umm-Ca-qcK" secondAttribute="centerX" id="IY5-8w-QTh"/>
                <constraint firstAttribute="bottom" secondItem="lA8-lM-6Vz" secondAttribute="bottom" constant="120" id="IyY-6U-w9f"/>
...
